--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+* {
+  padding: 0%;
+  margin: 0%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.body {
+  background-color: lightgreen;
   color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  text-align: center;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.title_1 {
+  padding-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title_2 {
+  padding-top: 30px;
+}
+
+.table_Container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding-top: 5%;
+}
+
+.choices {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.table {
+  table-layout: fixed;
+  width: 50%; /* Adjust the table width as needed */
+  border-collapse: collapse;
+}
+
+th,
+td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 8px;
+}
+
+.tablePlaceholder {
+  text-align: center;
+  font-weight: bold;
+}
+
+.col-type {
+  width: 6%;
+}
+
+.col-name {
+  width: 45%;
+}
+
+.selectTag {
+  margin-right: 5%;
+}
+
+.selectDate {
+  margin-right: 5%;
 }
