--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,18 @@
   margin: 0%;
 }
 
-.body {
+body {
   background-color: lightgreen;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
   text-align: center;
-  min-height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1; /* To keep the background below the content */
 }
 
 .title_1 {
