--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-* {
-  padding: 0%;
-  margin: 0%;
-}
-
 body {
   background-color: lightgreen;
   color: white;
@@ -14,15 +9,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: -1; /* To keep the background below the content */
-}
-
-.title_1 {
-  padding-top: 10px;
-}
-
-.title_2 {
-  padding-top: 30px;
+  z-index: -1;
 }
 
 .table_Container {
@@ -32,14 +19,9 @@ body {
   padding-top: 5%;
 }
 
-.choices {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
 .table {
   table-layout: fixed;
-  width: 50%; /* Adjust the table width as needed */
+  width: 50%;
   border-collapse: collapse;
 }
 
@@ -61,12 +43,4 @@ td {
 
 .col-name {
   width: 45%;
-}
-
-.selectTag {
-  margin-right: 5%;
-}
-
-.selectDate {
-  margin-right: 5%;
 }
